--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Trust Me</h2>
+                        <h2 class="text-white mt-0">Credible</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I have seen and been in multiple wonderful muscials. I use fair play to find some of the best musicals around. No need to search in song because I've got everything you need right here.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
@@ -67,14 +67,14 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0"> My Experiance</h2>
+                <h2 class="text-center mt-0">Experianced</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-award fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Preformance</h3>
-                            <p class="text-muted mb-0">As an actress, I’ve been captivated by the sheer talent and artistry displayed on stage—these musicals showcase performances that leave you breathless.</p>
+                            <p class="text-muted mb-0">As an actress, I've been captivated by the sheer talent and artistry displayed on stage—these musicals showcase performances that leave you breathless.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -109,8 +109,8 @@
                         <a class="portfolio-box" href="img/1.jpg" title="Project Name">
                             <img class="img-fluid" src="img/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#1</div>
+                                <div class="project-name">Wizard of OZ</div>
                             </div>
                         </a>
                     </div>
@@ -118,8 +118,8 @@
                         <a class="portfolio-box" href="img/2.jpg" title="Project Name">
                             <img class="img-fluid" src="img/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#2</div>
+                                <div class="project-name">Lion King</div>
                             </div>
                         </a>
                     </div>
@@ -127,8 +127,8 @@
                         <a class="portfolio-box" href="img/3.jpg" title="Project Name">
                             <img class="img-fluid" src="img/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#3</div>
+                                <div class="project-name">Wicked</div>
                             </div>
                         </a>
                     </div>
@@ -136,8 +136,8 @@
                         <a class="portfolio-box" href="img/4.jpg" title="Project Name">
                             <img class="img-fluid" src="img/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#4</div>
+                                <div class="project-name">Aladdin</div>
                             </div>
                         </a>
                     </div>
@@ -145,8 +145,8 @@
                         <a class="portfolio-box" href="img/5.jpg" title="Project Name">
                             <img class="img-fluid" src="img/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#5</div>
+                                <div class="project-name">Frozen</div>
                             </div>
                         </a>
                     </div>
@@ -154,8 +154,8 @@
                         <a class="portfolio-box" href="img/6.jpg" title="Project Name">
                             <img class="img-fluid" src="img/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">#6</div>
+                                <div class="project-name">Micheal Jackson</div>
                             </div>
                         </a>
                     </div>
