--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Credible</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">I have seen and been in multiple wonderful muscials. I use fair play to find some of the best musicals around. No need to search in song because I've got everything you need right here.</p>
+                        <p class="text-white-75 mb-4">I have seen and been in multiple wonderful muscials. I use fair play to find some of the best ones around. No need to search in song because I've got everything you need right here.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
@@ -106,16 +106,16 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/1.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/1.jpg" title="Wizard of Oz">
                             <img class="img-fluid" src="img/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">#1</div>
-                                <div class="project-name">Wizard of OZ</div>
+                                <div class="project-name">Wizard of Oz</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/2.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/2.jpg" title="Lion King">
                             <img class="img-fluid" src="img/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">#2</div>
@@ -124,7 +124,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/3.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/3.jpg" title="Wicked">
                             <img class="img-fluid" src="img/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">#3</div>
@@ -133,7 +133,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/4.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/4.jpg" title="Aladdin">
                             <img class="img-fluid" src="img/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">#4</div>
@@ -142,7 +142,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/5.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/5.jpg" title="Frozen">
                             <img class="img-fluid" src="img/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">#5</div>
@@ -151,7 +151,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="img/6.jpg" title="Project Name">
+                        <a class="portfolio-box" href="img/6.jpg" title="Micheal Jackson">
                             <img class="img-fluid" src="img/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">#6</div>
@@ -165,8 +165,8 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <h2 class="mb-4">Learn More about Broadway here!</h2>
+                <a class="btn btn-light btn-xl" target="_blank" href="https://playbill.com/">Discover</a>
             </div>
         </section>
         <!-- Contact-->
