--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h2 class="text-white mt-0">Credible</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I have seen and been in multiple wonderful muscials. I use fair play to find some of the best ones around. No need to search in song because I've got everything you need right here.</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <a class="btn btn-light btn-xl" href="#services">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -174,22 +174,62 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <h2 class="mt-0">About Our Winner</h2>
                         <hr class="divider" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
+                        <p class="text-muted mb-5">The musical Wizard of Oz has captured peoples hearts for many years. It continues to do this in these 3 ways.</p>
                     </div>
                 </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                        <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+
+        <!-- SLIDER STARTS -->
+                <div class="row justify-content-center">
+                    <div class="col-md-8 text-center">
+                        <div id="carouselExampleCaptions" class="carousel slide">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="img/WIZZfor1.1.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Addaptations</h5>
+                                  <p>"The Wiz" features an all-Black cast and soul music, while "Wicked" reexamines the Wicked Witch's backstory. Both adaptations offer fresh cultural insights into The Wizard of Oz.
+                                  </p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/WIZZfor1.2.webp" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Costumes</h5>
+                                  <p>The Wizard of Oz features vibrant, iconic costumes that bring each character to life, from Dorothy's blue dress to the whimsical outfits of the Scarecrow, Tin Man, and Wicked Witch.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/WIZZfor1.3.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Wonderful Plot</h5>
+                                  <p>The Wizard of Oz follows Dorothy’s journey in Oz, where she meets the Scarecrow, Tin Man, and Cowardly Lion. Together, they seek the Wizard and discover the importance of friendship.</p>
+                                </div>
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
                     </div>
                 </div>
+        <!-- SLIDER ENDS -->
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2024 - Top 6 Picks</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2024 - Top 6 Pix</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
