--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/WIZZfor1.2.webp" class="d-block w-100" alt="...">
+                                <img src="img/RUBYslipper.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Costumes</h5>
                                   <p>The Wizard of Oz features vibrant, iconic costumes that bring each character to life, from Dorothy's blue dress to the whimsical outfits of the Scarecrow, Tin Man, and Wicked Witch.</p>
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/WIZZfor1.3.jpg" class="d-block w-100" alt="...">
+                                <img src="img/plot.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Wonderful Plot</h5>
                                   <p>The Wizard of Oz follows Dorothy’s journey in Oz, where she meets the Scarecrow, Tin Man, and Cowardly Lion. Together, they seek the Wizard and discover the importance of friendship.</p>
