--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             </div>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="img/WIZZfor1.1.png" class="d-block w-100" alt="...">
+                                <img src="img/WIZZslidypic.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Addaptations</h5>
                                   <p>"The Wiz" features an all-Black cast and soul music, while "Wicked" reexamines the Wicked Witch's backstory. Both adaptations offer fresh cultural insights into The Wizard of Oz.
@@ -199,14 +199,14 @@
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/RUBYslipper.png" class="d-block w-100" alt="...">
+                                <img src="img/RUBYslidypic.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Costumes</h5>
                                   <p>The Wizard of Oz features vibrant, iconic costumes that bring each character to life, from Dorothy's blue dress to the whimsical outfits of the Scarecrow, Tin Man, and Wicked Witch.</p>
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/plot.jpg" class="d-block w-100" alt="...">
+                                <img src="img/meltingslidpic.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Wonderful Plot</h5>
                                   <p>The Wizard of Oz follows Dorothy’s journey in Oz, where she meets the Scarecrow, Tin Man, and Cowardly Lion. Together, they seek the Wizard and discover the importance of friendship.</p>
