--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="mb-5">Find the Best Musical to Sing Your Heart out To</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" href="#about">explore</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <h2 class="text-white mt-0">Credible</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I have seen and been in multiple wonderful muscials. I use fair play to find some of the best ones around. No need to search in song because I've got everything you need right here.</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started</a>
+                        <a class="btn btn-light btn-xl" href="#services">dive in</a>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                     <div class="col-lg-8 col-xl-6 text-center">
                         <h2 class="mt-0">About Our Winner</h2>
                         <hr class="divider" />
-                        <p class="text-muted mb-5">The musical Wizard of Oz has captured peoples hearts for many years. It continues to do this in these 3 ways.</p>
+                        <p class="text-muted mb-5">The enchanting musical The Wizard of Oz has captivated the hearts of audiences for generations, and its timeless charm continues to shine through many wonderful aspects, including three particularly noteworthy ones.</p>
                     </div>
                 </div>
 
